<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_favorite"
        android:title="@string/menu_favorite"
        android:icon="@drawable/icons8_favorites"
        />
    <item android:id="@+id/menu_brands"
        android:title="@string/menu_brands"
        android:icon="@drawable/icons8_brand"
        />
    <item android:id="@+id/menu_sellers"
        android:title="@string/menu_sellers"
        android:icon="@drawable/ic_store"
        />
    <item android:id="@+id/menu_cosmetics"
        android:title="@string/menu_cosmetics"
        android:icon="@drawable/icons8_makeup"
        />
    <item android:id="@+id/menu_face"
        android:title="@string/menu_face"
        android:icon="@drawable/icons8_face"
        />
    <item android:id="@+id/menu_hair"
        android:title="@string/menu_hair"
        android:icon="@drawable/icons8_hair"
        />
    <item android:id="@+id/menu_body"
        android:title="@string/menu_body"
        android:icon="@drawable/icons8_body"
        />
    <item android:id="@+id/menu_setting"
        android:title="@string/menu_setting"
        android:icon="@drawable/ic_settings"
        />
    <item android:id="@+id/menu_contactUs"
        android:title="@string/menu_contactUs"
        android:icon="@drawable/ic_contact_support"
        />
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:icon="@drawable/ic_exit_to_app"
        />
</menu>