<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Activity"
    tools:context=".views.Register_Activity"
    android:layoutDirection="rtl"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/Activity"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                tools:ignore="ContentDescription"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/register"
                android:textSize="19sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/imageView_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/Activity"
            >
            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="40dp"
                android:hint="@string/username"
                android:textColor="@color/black"
                android:inputType="text"
                android:textColorHint="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                >
                <EditText
                    android:id="@+id/EditText_firstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/FirstName"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    />
                <EditText
                    android:id="@+id/EditText_lastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/LastName"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:layout_marginStart="50dp"
                    android:textColorHint="@color/black"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/EditText_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                />
            <EditText
                android:id="@+id/EditText_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColorHint="@color/black"
                />
            <EditText
                android:id="@+id/EditText_rePassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/RePassword"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColorHint="@color/black"
                />
            <CheckBox
                android:id="@+id/show_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_hide_pass"
                android:layoutDirection="ltr"
                android:layout_gravity="end"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                >
                <EditText
                    android:id="@+id/EditText_state"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/State"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:textColorHint="@color/black"
                    />
                <EditText
                    android:id="@+id/EditText_city"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/City"
                    android:textColor="@color/black"
                    android:inputType="text"
                    android:layout_marginStart="50dp"
                    android:textColorHint="@color/black"
                    />
            </LinearLayout>
            <EditText
                android:id="@+id/EditText_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/Address"
                android:textColor="@color/black"
                android:inputType="text"
                android:textColorHint="@color/black"
                />
            <EditText
                android:id="@+id/EditText_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:hint="@string/phone_number"
                android:textColor="@color/black"
                android:inputType="phone"
                android:textAlignment="viewStart"
                android:textColorHint="@color/black"
                />
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:background="@color/purple_700"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="60dp"
                >
                <TextView
                    android:id="@+id/textView_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_message"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    />
                <TextView
                    android:id="@+id/textView_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_toEndOf="@id/textView_message"
                    android:layout_marginStart="10dp"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>