<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Activity"
    tools:context=".views.Login_Activity"
    android:layoutDirection="rtl"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/Activity"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                tools:ignore="ContentDescription"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/login"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_toEndOf="@id/imageView_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:hint="@string/username_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textColorHint="@color/black"
        />
    <EditText
        android:id="@+id/EditText_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textColorHint="@color/black"
        />
    <CheckBox
        android:id="@+id/show_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_hide_pass"
        android:layoutDirection="ltr"
        android:layout_gravity="end"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:background="@color/purple_700"
            />
        <TextView
            android:id="@+id/textView_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:text="@string/register_message"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/textView_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/textView_message"
            android:layout_marginStart="10dp"
            />
    </RelativeLayout>

</LinearLayout>