<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:scrollbars="none"
    android:layoutDirection="rtl"
    android:background="@color/Activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navbar_fragments.Category_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_makeUp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/makeup"
                android:foreground="@color/cardView_makeUp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_makeUp"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_makeUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:scrollbars="none"
                />
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_face"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/face"
                android:foreground="@color/cardView_face"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_face"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_face"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:scrollbars="none"
                />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_hair"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/hair"
                android:foreground="@color/cardView_hair"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_hair"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_hair"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:scrollbars="none"
                />
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_body"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="20dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/body"
                android:foreground="@color/cardView_body"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_body"
                android:textColor="@color/white"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textStyle="bold"
                />
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:scrollbars="none"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/Activity"/>
    </LinearLayout>
</ScrollView>